package gp018328.com.gupaoedu.homework.pattern.factory.homework3.abstractfactory;

public interface IAbstractFactory {
    IProduct createProduct();
    IProduct_New createProduct_New();
}
