package gp018328.com.gupaoedu.homework.pattern.factory.homework3.abstractfactory;

/**
 * @author 王锋伟
 */
public interface IFactory_New {
    IProduct_New createProduct_New();
}
