package gp018328.com.gupaoedu.homework.pattern.factory.homework3.abstractfactory;

/**
 * @author 王锋伟
 */
public class ProductB_New implements IProduct_New {

    @Override
    public void product_New() {
        System.out.println("It is ProducetB_New");
    }
}
